# connect

./: .gitignore  jang_history.md
connect/: PLAN.md  REQUIREMENTS.md
davinci-voice/: LICENSE  README.md  pyproject.toml
davinci-voice/davinci_voice/: __init__.py
davinci-voice/davinci_voice/core/: __init__.py
davinci-voice/davinci_voice/inference/: __init__.py  davinci_voice_model.py  davinci_voice_tokenizer.py
docs/: AIRI-AVATAR-SYSTEM-VERIFICATION.md  AIRI-INTEGRATION-RESEARCH.md  AIRI-MISSING-FEATURES-REPORT.md  AIRI-NEXTJS-REBUILD-ANALYSIS.md  AIRI-UI-UX-REUSE-VERIFICATION.md  PLAN-voice-call-v2.md  plan.md
docs/designs/: tts-streaming-server.md
docs/research/: qwen3-tts-gd-finetuning.md
docs/system/: SYSTEM-ARCHITECTURE.md
finetune/: test_gd_voice.py
finetune/data_jang/: dataset_stats.json  icl_sample_info.json  jang_train.jsonl  jang_val.jsonl
finetune/data_v5/: gd_train.jsonl
finetune/output/: similarity_analysis.json
finetune/scripts/: create_jang_icl_prompt.py  prepare_dataset.py  prepare_full_dataset.py  prepare_jang_dataset.py  prepare_speaker02_dataset.py  prepare_v5_no_augment.py  test_inference.py  test_jang_v1.py  test_v10.py  test_v5_long.py  test_v6.py  test_v7.py  test_v7_long.py  train_jang_v1.py  train_speaker02_v3.py  train_v10.sh  train_v4_optimized.sh  train_v5_optimized.sh  train_v6_continue.sh  train_v6_fresh.sh  train_v7_aggressive.sh  train_v8_improved.sh  train_v9.sh  voice_similarity_analysis.py
tts_server/: .gitignore  IQatsIl4lEI.txt  config.py  gd_short.txt  main.py  requirements.txt  streamlit_app.py  tKsj0bRLjVk.txt  test_streaming_pipeline.py  test_tail_comparison.py
tts_server/api/: deps.py
tts_server/core/: connection.py  exceptions.py  middleware.py  rate_limiter.py
tts_server/data/: test_audio.raw
tts_server/docs/: API.md  API_INTEGRATION_GUIDE.md  FRONTEND_INTEGRATION.md  GD_Voice_Training_Report.md  PLAN-JANG-VOICE.md  PLAN-PHONEBOOK-V2.md  PLAN-realtime-voice-call.md  PLAN.md  REALTIME_OPTIMIZATION.md  (+1 more)
(+40 files in other folders)
